# Introduction-to-artificial-inteligence

./: .gitignore  README.md
Lab1-linear-regression/: lab_1.ipynb  pyproject.toml
Lab2-decision-trees/: lab_2.ipynb  pyproject.toml
Lab3-neural-networks/: lab_3.ipynb  pyproject.toml
