[tool.poetry]
name = "lab1-linear-regression"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <134285490+krudny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
