[tool.poetry]
name = "lab2-decision-trees"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <134285490+krudny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
