[tool.poetry]
name = "lab2-decision-trees"
version = "0.1.0"
description = ""
authors = ["Kamil Rudny <134285490+krudny@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
scipy = "^1.14.1"
missingno = "^0.5.2"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
